# syspass-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.sh  deny.toml  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  release.yml  rust.yml
proptest-regressions/api/syspass/: v3.txt
resources/: test_config.json  test_config_v2.json
src/: config.rs  edit.rs  main.rs  prompt.rs  remove.rs  search.rs
src/api/: account.rs  api_client.rs  category.rs  client.rs  entity.rs  mod.rs  syspass.rs
src/api/syspass/: v2.rs  v3.rs
src/edit/: category.rs  client.rs  edit_password.rs  new_password.rs
src/remove/: account.rs  category.rs  client.rs
syspass-cli/: Cargo.toml
syspass-cli/proptest-regressions/api/: syspass.txt
syspass-cli/proptest-regressions/api/syspass/: v2.txt
syspass-cli/src/: api.rs  config.rs  edit.rs  filter.rs  helper.rs  main.rs  prompt.rs  remove.rs  search.rs  update.rs
syspass-cli/src/api/: account.rs  api_client.rs  category.rs  client.rs  entity.rs  syspass.rs
syspass-cli/src/api/syspass/: v2.rs  v3.rs
syspass-cli/src/edit/: category.rs  client.rs  edit_password.rs  new_password.rs
syspass-cli/src/remove/: account.rs  category.rs  client.rs
syspass-cli/tests/: integration_test.rs
syspass-cli/tests/responses/: github-release-bad.json  github-release.json
syspass-cli/tests/responses/syspass/v2/: account_add.json  account_add_failed.json  account_delete.json  account_view_password.json  accounts_search_results.json  category_delete.json  category_list.json  client_delete.json  client_list.json  new_account.json  view_account.json
syspass-cli/tests/responses/syspass/v3/: account_change_password.json  account_delete.json  account_delete_not_found.json  account_view_password.json  accounts_search_results.json  category_list.json  client_list.json  view_account.json
tests/: integration_test.rs
tests/responses/syspass/v3/: account_search_empty.json
tools/: build.sh  release.sh
