[package]
name = "syspass-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI client for Syspass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
bitflags = "2.3.3"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive", "cargo", "wrap_help"] }
colored = "2.0.4"
dilib = "0.2.1"
home = "0.5.5"
inquire = { version = "0.6.2", features = ["date"] }
log = "0.4.19"
passwords = "3.1.13"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.164"
serde_derive = "1.0.166"
serde_json = "1.0.103"
shellexpand = "3.1.0"
term-table = "1.3.2"

[dev-dependencies]
assert_cmd = "2.0.12"
mockito = "1.1.0"
proptest = "1.2.0"

[profile.release]
strip = true
lto = true
panic = "abort"
