[package]
name = "syspass-cli"
version = "0.3.3"
edition = "2021"
description = "A CLI client for Syspass"
repository = "https://github.com/ggnosh/syspass-cli"
keywords = ["syspass", "cli"]
license = "MIT"
readme = "../README.md"
authors = ["GGnosh"]
categories = ["command-line-utilities"]

[dependencies]
arboard = { version = "3.2.0", default-features = false }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "time"] }
clap = { version = "4.4.6", features = ["cargo", "wrap_help", "color", "suggestions"] }
colored = { version = "2.0.4" }
home = "0.5.5"
inquire = { version = "0.6.2", features = ["date"] }
log = { version = "0.4.19" }
passwords = { version = "3.1.13" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164" }
serde_derive = "1.0.166"
serde_json = { version = "1.0.103" }
shellexpand = "3.1.0"
term-table = "1.3.2"
term_size = "0.3.2"
version-compare = "0.1.1"

[dev-dependencies]
assert_cmd = "2.0.12"
mockito = "1.2.0"
predicates = "3.0.3"
test-case = "3.2.0"
regex = "1.9.1"
strip-ansi-escapes = "0.2.0"
tempfile = "3.8.1"
