[package]
name = "syspass-cli"
version = "0.5.1"
edition = "2021"
description = "A CLI client for Syspass"
repository = "https://github.com/ggnosh/syspass-cli"
homepage = "https://github.com/ggnosh/syspass-cli"
keywords = ["syspass", "cli"]
license = "MIT"
readme = "../README.md"
authors = ["GGnosh"]
categories = ["command-line-utilities"]
exclude = [
    "tests",
    "report.json"
]

[dependencies]
arboard = { version = "3.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["cargo", "wrap_help", "color", "suggestions"] }
colored = { version = "2.0" }
home = "0.5"
inquire = { version = "0.7", features = ["date"] }
log = { version = "0.4" }
passwords = { version = "3.1" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = { version = "1.0" }
shellexpand = "3.1"
term-table = "1.3"
term_size = "0.3"
version-compare = "0.2"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.2"
predicates = "3.0"
test-case = "3.2"
regex = "1.9"
strip-ansi-escapes = "0.2"
tempfile = "3.8"
