[package]
name = "syspass-cli"
version = "0.7.0"
edition = "2021"
description = "A CLI client for Syspass"
repository = "https://github.com/ggnosh/syspass-cli"
homepage = "https://github.com/ggnosh/syspass-cli"
keywords = ["syspass", "cli"]
license = "MIT"
readme = "../README.md"
authors = ["GGnosh"]
categories = ["command-line-utilities"]
exclude = [
    "tests",
    "report.json"
]

[dependencies]
arboard = { version = "3.4", default-features = false, features = ["wayland-data-control"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["cargo", "wrap_help", "color", "suggestions"] }
clap_complete = { version = "4.5" }
colored = { version = "2.0" }
home = "0.5"
log = { version = "0.4" }
passwords = { version = "3.1" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = "3.1"
term-table = "1.3"
terminal_size = "0.4"
version-compare = "0.2"
once_cell = "1.19"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.2"
predicates = "3.0"
test-case = "3.2"
regex = "1.9"
strip-ansi-escapes = "0.2"
tempfile = "3.14"
